# chip-8-emu-rs

./: .gitignore  Cargo.toml
src/: args.rs  audio.rs  chip8.rs  fstools.rs  input.rs  main.rs  opcode_parser.rs  opcodes.rs
