[package]
name = "chip-8-emu"
version = "0.1.0"
edition = "2021"
authors = ["Amy Y"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.9"
winit = "0.26"
rand = "0.8.5"
clap = { version = "3.1.8", features = ["derive"] }

savefile = "0.10"
savefile-derive = "0.10"

cpal = "*"